# pt-elections

./: .gitignore  Cargo.toml  README.md  analysis.py  analysis.sql  methodology.md  run.py  specification.md
etl/: all.sql  autarquicas2025.sql  legislativas2022.sql  legislativas2025.sql
examples/: compare.sql  description.sql  legislativas.sql  simple_comparison.sql
lib/fs/: Cargo.toml
lib/fs/src/: cache.rs  lib.rs  local.rs  s3.rs
results/: amadora.csv
src/: autarquicas2025.rs  fetch.rs  main.rs  sources.rs
src/sources/: legislativas2022.rs  legislativas2025.rs  mod.rs
