[workspace]
members = [
    "lib/fs"
]
resolver = "2"

[package]
name = "elections_pt"
version = "0.1.0"
edition = "2024"

[dependencies]

# perform requests to the internet
reqwest = {version="0.12", features = ["gzip", "json"]}
reqwest-retry = "0.5.0"
reqwest-middleware = "0.3.0"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["std"], default-features = false }

fs = {path = "lib/fs"}

futures = "0.3"

tracing = "*"

# run time
tokio = {version="1.0", features=["rt", "macros", "rt-multi-thread"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
itertools = "0.14.0"
