[package]
name = "fs"
version = "0.1.0"
edition = "2024"

[dependencies]
# async utilities
async-trait = "*"
futures = "0.3"

# to perform time-based calculations
time = {version="*", default-features = false, features = ["formatting", "parsing", "macros"]}

# logging
log = "*"

# S3 integration
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "*"
aws-credential-types = "*"

[dev-dependencies]
tokio = {version="1.0", features=["rt", "macros", "rt-multi-thread"]}
